--- a/src/styles/SwipeCardComponent.module.css
+++ b/src/styles/SwipeCardComponent.module.css
@@ -51,9 +51,25 @@
   cursor: pointer;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
 .button:nth-child(1) {
   background-color: red;
 }
+
 .button:nth-child(2) {
   background-color: green;
+}
+.bubbleContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px;
+}
+
+.bubble {
+  padding: 10px;
+  margin: 5px;
+  border-radius: 25px; /* This makes the div look like a bubble */
+  background-color: #f2f2f2;
+  color: #333;
 }
