--- a/src/styles/SwipeCards.module.css
+++ b/src/styles/SwipeCards.module.css
@@ -7,7 +7,7 @@
   background: #f0f0f0;
   padding: 30px;
   border-radius: 10px;
-  font-family: inherit;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .nextCard {
